Fix top tracks not showing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -7,20 +7,29 @@ h1 {
 
 h2 {
     color: rgb(142, 22, 189);
-    padding: 6px;
+    padding: 8px;
 }
 
 .top-tab {
     padding: 10%;
     margin-top: -8%;
 }
+
+.top-tab h3 {
+    border: 1px rgb(30, 215, 96) solid;
+    text-align: center;
+    padding: 6px;
+}
+
 .top-tab #tabs{
     background: #007b5e;
     color: #eee;
 }
+
 .top-tab #tabs h6.section-title{
     color: #eee;
 }
+
 .top-tab #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     color: #0062cc;
     background-color: transparent;
@@ -29,6 +38,7 @@ h2 {
     font-size: 16px;
     font-weight: bold;
 }
+
 .top-tab .nav-link {
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
@@ -37,13 +47,16 @@ h2 {
     font-size: 16px;
     font-weight: 600;
 }
+
 .top-tab .nav-link:hover {
     border: none;
 }
+
 .top-tab thead{
     background: #f3f3f3;
     color: #333;
 }
+
 .top-tab a{
     text-decoration: none;
     color: rgb(30, 215, 96);
